--- a/Proyecto0.1/Dashboard1/Dashboard1.csproj
+++ b/Proyecto0.1/Dashboard1/Dashboard1.csproj
@@ -96,9 +96,6 @@
     <Compile Include="LoginAdmin.xaml.cs">
       <DependentUpon>LoginAdmin.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Window1.xaml.cs">
-      <DependentUpon>Window1.xaml</DependentUpon>
-    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -120,10 +117,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="LoginAdmin.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Window1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -153,7 +146,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\A %281%29.png" />
