--- a/Proyecto0.1/Dashboard1/packages.config
+++ b/Proyecto0.1/Dashboard1/packages.config
@@ -3,4 +3,5 @@
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net461" />
   <package id="ModernUICharts.WPF.Beta" version="0.9.1" targetFramework="net461" />
+  <package id="WebEye.Controls.Wpf.WebCameraControl" version="1.0.3" targetFramework="net461" />
 </packages>
